force-app/main/default/objects/TTGS_Item__c/TTGS_Item__c.object-meta.xml
<CustomObject>
    <label>TTGS Item</label>
    <nameField>
        <displayFormat>TTGSI-{MMYY}-{000000}</displayFormat>
        <label>TTGS Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TTGS Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>