force-app/main/default/objects/TTGS_Item__c/fields/External_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Product_Name__c</fullName>
    <formula>Product_Name__r.External_Data_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Product Name</label>
    <type>Text</type>
</CustomField>