force-app/main/default/objects/TTGS_Item__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>TTGS Items</relationshipLabel>
    <relationshipName>TTGS_Items</relationshipName>
    <type>Lookup</type>
</CustomField>