force-app/main/default/objects/TTGS_Item__c/fields/Strain__c.field-meta.xml
<CustomField>
    <fullName>Strain__c</fullName>
    <formula>Product_Name__r.Strain__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Strain</label>
    <type>Text</type>
</CustomField>