force-app/main/default/objects/TTGS_Item__c/fields/TTGS_ItemID__c.field-meta.xml
<CustomField>
    <fullName>TTGS_ItemID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>TT Unique Item ID and Site Specific</inlineHelpText>
    <label>TTGS ItemID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>