force-app/main/default/objects/TTGS_Item__c/fields/TTGS_Response__c.field-meta.xml
<CustomField>
    <fullName>TTGS_Response__c</fullName>
    <inlineHelpText>Trace and Track Error Log and Site Specific</inlineHelpText>
    <label>TTGS Response</label>
    <length>50768</length>
    <type>LongTextArea</type>
</CustomField>