force-app/main/default/objects/TTGS_Item__c/fields/Unit_UOM__c.field-meta.xml
<CustomField>
    <fullName>Unit_UOM__c</fullName>
    <formula>TEXT(Product_Name__r.Unit_Of_Measure__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit UOM</label>
    <type>Text</type>
</CustomField>