force-app/main/default/objects/TTGS_Item__c/fields/Unit_Weight__c.field-meta.xml
<CustomField>
    <fullName>Unit_Weight__c</fullName>
    <formula>Product_Name__r.Unit_Net_Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>